--- a/PersonalBusinessManagement/Views/Home/Index.cshtml
+++ b/PersonalBusinessManagement/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Personal Business Management</h1>
+    <p>A big project that I'm very passionate to build. It combines most of the
+    knowledge and the skills that I've been learning so far..</p>
 </div>
