To-Do List through Dapper has been implemented

--- a/PersonalBusinessManagement/Views/Api/Index.cshtml
+++ b/PersonalBusinessManagement/Views/Api/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model (PersonalBusinessManagement.Models.Currency currency, List<PersonalBusinessManagement.Models.GithubRepo> repos)
+﻿@model (Currency currency, List<GithubRepo> repos)
 
 <div class="container p-3">
     <div class="row pt-4">
