--- a/PersonalBusinessManagement/Views/Projects/Create.cshtml
+++ b/PersonalBusinessManagement/Views/Projects/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model PersonalBusinessManagement.Models.Project
+﻿@model Project
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Project</h4>
+<h1 class="text-primary">Project</h1>
+<br />
+<h4>Create</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
