--- a/PersonalBusinessManagement/Views/Projects/Index.cshtml
+++ b/PersonalBusinessManagement/Views/Projects/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<PersonalBusinessManagement.Models.Project>
+﻿@model IEnumerable<Project>
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <br />
-<h1>Projects</h1>
+<h1 class="text-primary">Projects</h1>
 <br />
 <br />
 <p>
