--- a/PersonalBusinessManagement/Views/Projects/Search.cshtml
+++ b/PersonalBusinessManagement/Views/Projects/Search.cshtml
@@ -1,9 +1,9 @@
-﻿@model PersonalBusinessManagement.Models.Project
+﻿@model Project
 @{
     ViewData["Title"] = "Search";
 }
 
-<h1>Projects</h1>
+<h1 class="text-primary">Projects</h1>
 <br /> <br />
 @*<h4>Search</h4>
 <hr />*@
