--- a/PersonalBusinessManagement/Views/Shared/_Layout.cshtml
+++ b/PersonalBusinessManagement/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Todo" asp-action="Index">To-Do List</a>
+                        </li>
                     </ul>
                 </div>
             </div>
