Completely removed EF & DbContext. Improved  SearchProject

--- a/PersonalBusinessManagement/Views/Projects/Search.cshtml
+++ b/PersonalBusinessManagement/Views/Projects/Search.cshtml
@@ -22,7 +22,7 @@
         <form asp-controller="Projects" asp-action="ShowSearchResults" onsubmit="return checkInput()">
             <div class="form-group">
                 <label for="searchPhrase" class="control-label">Search</label>
-                <input id="search" name="searchPhrase" class="form-control mb-2" />
+                <input id="search" name="searchTerm" class="form-control mb-2" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Search" class="btn btn-primary" />
